--- a/style.css
+++ b/style.css
@@ -18,3 +18,11 @@ body {
     text-align: center;
     color: rgb(114, 7, 100);
 }
+
+.heading {
+    font-size: 35px;
+    font-weight: 200; /*thickness of font*/
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    text-shadow: 5px 5px 2px rgba(0, 0, 0, .3);
+    letter-spacing: 2px;
+}
