--- a/style.css
+++ b/style.css
@@ -21,8 +21,14 @@ body {
 
 .heading {
     font-size: 35px;
-    font-weight: 200; /*thickness of font*/
+    font-weight: 200; /*thickness of the font*/
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     text-shadow: 5px 5px 2px rgba(0, 0, 0, .3);
     letter-spacing: 2px;
+}
+
+.joke {
+    font-size: 25px;
+    font-weight: 500px;
+    margin: 40px;
 }
